cc: Disable checker-imaging for decode=async tag.

Temporarily disabling checkering of decode=async tag images to debug
entries in ukm logs for checkerboarded images in the control group for
checkerimaging finch study.

R=vmpstr@chromium.org

Bug: 833666
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ib9a79262599efa17fd18e9cb71d7518492e9a7ee
Reviewed-on: https://chromium-review.googlesource.com/1014644
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551513}
Former-commit-id: 9bbdf45e7f766b1021a2fba39e98a746d356e681